[gd_scene load_steps=16 format=3 uid="uid://vf1lp3clm4lo"]

[ext_resource type="Script" uid="uid://bujpb377tigde" path="res://scenes/ui/player_defeated_menu.gd" id="1_ijkb4"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="2_fu5m3"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/sound_button.tscn" id="3_7k7h4"]
[ext_resource type="PackedScene" uid="uid://da10yhbdl8klh" path="res://assets/particles/continue_particles.tscn" id="4_fu5m3"]

[sub_resource type="Animation" id="Animation_fu5m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijkb4"]
resource_name = "auto"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"focus_first_available_choice"
}, {
"args": [],
"method": &"animation_player_play_restore"
}]
}

[sub_resource type="Animation" id="Animation_buwwf"]
resource_name = "out"
length = 1.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7k7h4"]
resource_name = "restore"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwwf"]
_data = {
&"RESET": SubResource("Animation_fu5m3"),
&"auto": SubResource("Animation_ijkb4"),
&"out": SubResource("Animation_buwwf"),
&"restore": SubResource("Animation_7k7h4")
}

[sub_resource type="Animation" id="Animation_k4mhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%RestoreButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="Animation" id="Animation_moutl"]
resource_name = "restorebuttonshimmer"
length = 5.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%RestoreButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1), Color(0.5676, 0.86, 0.767407, 1), Color(0.7138, 0.86, 0.5676, 1), Color(0.86, 0.630953, 0.5676, 1), Color(0.86, 0.5676, 0.782027, 1), Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4mhs"]
_data = {
&"RESET": SubResource("Animation_k4mhs"),
&"restorebuttonshimmer": SubResource("Animation_moutl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijkb4"]
bg_color = Color(0.3, 0.3, 0.3, 0.435294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu5m3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fu5m3"]

[node name="PlayerDefeatedMenu" type="CanvasLayer"]
layer = 5
script = ExtResource("1_ijkb4")
confirmation_timer_base_waittime = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_buwwf")
}
autoplay = "auto"

[node name="ConfirmationTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 99.0
one_shot = true
ignore_time_scale = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_fu5m3")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Menu" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
layout_mode = 2
theme_override_constants/outline_size = 14
text = "DEFEATED"
horizontal_alignment = 1

[node name="Choices" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestoreMarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="RestoreAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_k4mhs")
}
autoplay = "restorebuttonshimmer"

[node name="RestoreButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer" instance=ExtResource("3_7k7h4")]
unique_name_in_owner = true
self_modulate = Color(0.568627, 0.647059, 0.858824, 1)
layout_mode = 2
text = "REVIVE"

[node name="Node2D" type="Node2D" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton"]
position = Vector2(-25.78, 16.17)

[node name="ContinueParticles" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton/Node2D" instance=ExtResource("4_fu5m3")]

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_7k7h4")]
unique_name_in_owner = true
layout_mode = 2
text = "RETRY"

[node name="LeaveButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("3_7k7h4")]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"

[node name="ConfirmProgressBar" type="ProgressBar" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ijkb4")
theme_override_styles/fill = SubResource("StyleBoxFlat_fu5m3")
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ProgressNotch1" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_fu5m3")
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 2

[node name="ProgressNotch2" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 4

[node name="ProgressNotch3" type="ColorRect" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/ConfirmProgressBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_horizontal = 10
